--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "xfiles",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +11,15 @@
   "dependencies": {
     "ejs": "^3.1.2",
     "express": "^4.17.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/siewla/thexfiles.git"
+  },
+  "bugs": {
+    "url": "https://github.com/siewla/thexfiles/issues"
+  },
+  "homepage": "https://github.com/siewla/thexfiles#readme",
+  "description": ""
 }
