--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "xfiles",
+  "name": "thexfiles",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ejs": "^3.1.2",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/siewla/thexfiles.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/siewla/thexfiles/issues"
   },
   "homepage": "https://github.com/siewla/thexfiles#readme",
-  "description": ""
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.1"
+  }
 }
